--- a/style.css
+++ b/style.css
@@ -85,15 +85,16 @@ footer {
     margin-top: 100px;
 }
 
+/* This controls the styling for the categories in the footer */
 .category {
     flex-grow: 1;
     padding: 50px;
 }
 
+/* This makes the copyright at the absolute bottom */
 #copyright {
     position: absolute;
     bottom: 0;
     width: 100%;
     text-align: center;
-
 }
